# aoc2020

./: .gitignore  aoc2020.cabal  cabal.project
.github/workflows/: haskell.yml
app/: Main.hs
bench/: Bench.hs
src/: Calendar.hs  Day.hs  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/Control/: Comonad.hs  Vector.hs
src/Data/: BoolGrid.hs  FinGrid.hs  Grid.hs  Zipper.hs
src/Day11/: Grid.hs
src/Day17/: BoolGrid.hs  Vec.hs  Vector.hs
src/Day24/: BoolGrid.hs
test/: Spec.hs
