cabal-version:  3.4
name:           aoc2020
version:        0.17.0.0
description:    Advent of Code 2020 solutions
homepage:       https://github.com/drumhacker72/aoc2020#readme
bug-reports:    https://github.com/drumhacker72/aoc2020/issues
author:         J. Nelson
maintainer:     drumhacker72@gmail.com
copyright:      Copyright (c) 2020 J. Nelson
license:        BlueOak-1.0.0
license-file:   LICENSE.md
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/drumhacker72/aoc2020

common shared
  build-depends:
      base ^>= 4.14.0.0
    , comonad ^>= 5.0.7
    , containers ^>= 0.6.4.1
    , split ^>= 0.2.3.4
    , transformers ^>= 0.5.6.2
    , vector ^>= 0.12.1.2
  default-language: Haskell2010
  ghc-options: -O2
  other-extensions:
    FlexibleContexts
    TypeApplications

library
  import: shared
  exposed-modules:
    Day
    Day1
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Day10
    Day11
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17
  other-modules:
    Data.FinGrid
    Data.Grid
    Data.Zipper
  hs-source-dirs: src

executable day
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: aoc2020

test-suite test
  import: shared
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  build-depends:
      aoc2020
    , HUnit ^>= 1.6.1.0
