cabal-version:  3.0
name:           aoc2020
version:        0.25.0.2
description:    Advent of Code 2020 solutions
homepage:       https://github.com/drumhacker72/aoc2020#readme
bug-reports:    https://github.com/drumhacker72/aoc2020/issues
author:         J. Nelson
maintainer:     drumhacker72@gmail.com
copyright:      Copyright (c) 2020 J. Nelson
license:        BlueOak-1.0.0
license-file:   LICENSE.md
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/drumhacker72/aoc2020

common shared
  build-depends:
      base ^>= 4.13.0.0 || ^>= 4.14.1.0
    , comonad ^>= 5.0.7
    , containers ^>= 0.6.4.1
    , MemoTrie ^>= 0.6.10
    , primitive ^>= 0.7.1.0
    , repa ^>= 3.4.1.4
    , transformers ^>= 0.5.6.2
    , vector ^>= 0.12.1.2
  default-language: Haskell2010
  other-extensions:
    DeriveFunctor
    ExistentialQuantification
    FlexibleContexts
    GeneralizedNewtypeDeriving
    TupleSections
    TypeFamilies
    TypeOperators

common extra-deps
  build-depends:
      aoc2020
    , deepseq ^>= 1.4.4.0
    , HUnit ^>= 1.6.1.0
    , parallel-io ^>= 0.3.3
    , time ^>= 1.11.1.1

library
  import: shared
  exposed-modules:
    Calendar
    Day
  other-modules:
    Day1
    Day2
    Day3
    Day4
    Day5
    Day6
    Day7
    Day8
    Day9
    Day10
    Day11 Day11.Grid
    Day12
    Day13
    Day14
    Day15
    Day16
    Day17 Day17.Vec
    Day18
    Day19
    Day20
    Day21
    Day22
    Day23
    Day24 Day24.BoolGrid
    Day25
  hs-source-dirs: src

executable day
  import: shared
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: aoc2020

test-suite test
  import: shared, extra-deps
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options:
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N

benchmark runtimes
  import: shared, extra-deps
  type: exitcode-stdio-1.0
  main-is: Bench.hs
  hs-source-dirs: bench
  ghc-options: -O2
